[package]
name = "rusty_utils"
version = "0.1.1"
edition = "2021"
description = "A Rust package that provides utility functions inspired by or ported from other programming languages."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
